# ast2json-cli

./: .gitignore  LICENSE  README.md  justfile  main.py  pyproject.toml  pytojson.py  sum_to_n.py
.github/workflows/: release.yml
ast2json/: sum_to_n.py.json
