[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "ast2json==0.4",
    "markdown-it-py==4.2.0",
    "mdurl==0.1.2",
    "pygments==2.20.0",
    "rich==15.0.0",
    "shellingham==1.5.4",
    "typer==0.26.8",
]
